# physweave

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
physweave/: __init__.py
physweave/diffsim/: __init__.py  integrators.py  systems.py
physweave/moldyn/: __init__.py  lennard_jones.py
physweave/quantfin/: __init__.py  pricing.py  sde.py
physweave/quantum/: __init__.py  statevector.py
physweave/surrogates/: __init__.py  fourier_ridge.py  spectral.py
tests/: test_diffsim.py  test_moldyn.py  test_quantfin.py  test_quantum.py  test_surrogates.py
